<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diudkr.Landscape3d.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/landscapeView"
        class="com.diudkr.Landscape3d.LandscapeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/newGroup"
        android:layout_below="@id/my_toolbar" />

    <LinearLayout
        android:id="@+id/newGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/detailBtnsGroup"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBtnNew"
            android:text="@string/btnNew"
            android:textColor="@color/design_default_color_secondary_variant" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailBtnsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/waterGroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detailBtnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/lblDetailLevel" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnIncDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBtnIncDetail"
            android:text="@string/btnIncDetail" />

        <Button
            android:id="@+id/btnDecDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBtnDecDetail"
            android:text="@string/btnDecDetail" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/waterGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/drawMethodGroup"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblWaterGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labWater" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn5Rivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBtn5Rivers"
            android:text="@string/btn5Rivers" />

        <Button
            android:id="@+id/btnFlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBtnFlood"
            android:text="@string/btnFlood" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawMethodGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDrawMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spnPrompt" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spnDrawmethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />
    </LinearLayout>

</RelativeLayout>